k8s/demo-springboot-deploy-resources-error.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-springboot-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-springboot
  template:
    metadata:
      labels:
        app: demo-springboot
        env: dev
    spec:
      containers:
        - name: demo-springboot
          image: eduardomelle/demo:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "300Mi"
              cpu: "40000m" # 40 cores
