k8s/demo-springboot-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-springboot-svc
spec:
  selector:
    app: demo-springboot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
