k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-springboot-ingress
  namespace: eduardomelle-dev
spec:
  rules:
    - host: demo-springboot.apps.rm3.7wse.p1.openshiftapps.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: demo-springboot-svc
                port:
                  number: 80
